# reckon

./: .dockerignore  .gitignore  .gitmodules  Dockefile.etcd  Dockerfile  Dockerfile.benchmark  Dockerfile.etcd  Dockerfile.mininet  Dockerfile.ocamlpaxos  Dockerfile.zookeeper  FailureEval.ipynb  LICENSE  Makefile  README.md  TODO.txt  Untitled.ipynb  benchmark.py  benchmark_local.py  clean.sh  cleanup.py  client.py  client_runner.py  install.sh  requirements.txt  run.sh  run_tests.py  studyDoc.txt  tester.py  zkDoc.txt
.github/workflows/: main.yml
Zookeeper/scripts/: zkstartupdate.sh
distributions/: message_pb2.py  ops.py  uniform.py
etcd/docker/: .Dockerfile.swp  .remote_image_install.sh.swp  Dockerfile  config.yml  docker_swarm_init.sh  remote_image_install.sh  remote_image_start.sh
etcd/scripts/: .etcd_master.sh.swp
failures/: leader-backup.py  leader.py  none.py
notes/: testing_options.txt
reckon/: __init__.py  __main__.py  client_runner.py  client_test.py  reckon_types.py
reckon/failures/: __init__.py  intermittent_full.py  intermittent_partial.py  kill_n.py  leader-backup.py  leader.py  leader_only.py  none.py  partialpartition.py  stat.py
reckon/goclient/: client.go  go.mod
reckon/javaclient/: flake.nix  settings.gradle
reckon/ocaml_client/: dune-project  flake.nix  reckon-shim.opam
reckon/ocaml_client/lib/: command_line.ml  dune  io.ml  reckon_shim.ml  types.ml
reckon/ocaml_client/rcclient/: rcclient.ml
reckon/ocaml_client/test/: dune  out.bin.2  out.bin.3  out.bin.5  out.hex  test.ml
reckon/systems/: __init__.py
reckon/systems/ocons/clients/: client.ml  dune  dune-project  flake.nix  reckon-ocons.opam
reckon/topologies/: __init__.py  simple.py  wan.py
reckon/workload/: __init__.py  poisson.py  uniform.py
scripts/: ENTRYPOINT.sh  clean.sh  conspire.py  docker.sh  etcd_master.sh  etcd_stop.sh  etcdctl.sh  flake.nix  general_setup.sh  lossy_etcd.py  reckon_paper.py  run.sh  run_machine.sh  test_entrypoint.sh  test_log.txt  test_topo.py  tester.py  throughput.py  util.py
scripts/depreciated/: etcd_install.sh  etcd_startup.sh
scripts/install/: Makefile  deps-Makefile
src/: Makefile  client_runner.py  reckon_types.py
src/distributions/: __init__.py  uniform.py
src/failures/: __init__.py  follower.py  intermittent.py  intermittent_full.py  intermittent_partial.py  leader.py  none.py  partialpartition.py
src/goclient/: client.go  go.mod
src/ocaml_client/: Makefile  rcclient.opam
src/ocaml_client/rcclient/: dune  rcclient.ml
src/systems/: __init__.py
src/topologies/: __init__.py  tree.py  (+4 more)
systems/: __init__.py  systems_classes.py
systems/ocaml-paxos/clients/ocaml/: .merlin  Makefile  client.ml  dune
systems/ocons/clients/ocaml/: Makefile  client.ml  dune  dune-project  ocons-reckon-client.opam
systems/ocons/clients/ocaml/reckon/: dune  reckon.ml  reckon.mli
tester/: .run_tests.py.swp  .test_runner.py.swp  Makefile  README.md  experiment.txt  generator.py  latency_1.csv  link.py  log.txt  run_tests.py  setup.py  sh.out  test  test.py  test_runner.py
tests/: testing_options.txt
topologies/: custom_topo.py  simple.old  simple.py  simplerestart.py  tree.py  utils.py
utils/: failure.py  link.py  message.proto  message_pb2.py  tester.py
zookeeper/: Dockerfile  zk_server_start.sh  zoo.cfg
(+1086 files in other folders)
