(lang dune 2.7)
(name reckon-shim)
(source (github cjen1/OcamlPaxos))
(authors "Chris Jensen")

(allow_approximate_merlin)

(generate_opam_files true)

(package
  (name reckon-shim)
  (synopsis "Reckon")
  (depends 
    (ocaml (= 5.1.0))
    yojson
    cmdliner
    iter
    accessor
    crowbar
    ppx_jane
    ppx_log
    ppx_accessor
    accessor
    base
    core
    core_unix
    (eio (>= 0.12))
    (eio_main (>= 0.12))
    ))
