(lang dune 2.7)
(name ocons-reckon-client)
(authors "Chris Jensen")
(allow_approximate_merlin)

(generate_opam_files true)

(package
  (name ocons-reckon-client)
  (synopsis "Reckon client for OCons implementations")
  (depends
    core
    async
    accessor_async
    ocaml-protoc
    ocplib-endian
    ppx_log
    ppx_accessor
    dune
    ppx_jane
    ))
